# quic-socks

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: c-cpp.yml
cmake/: FindAsio.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  http_proxy.cc
src/lib/channel/: quic_channel.cc  quic_channel.h
src/lib/coro/: task.h
src/lib/observer/: conn_manager.h  network_observer.cc  network_observer.h
src/lib/tunnel/: asio_coro.h  asio_formatter.h  asio_helper.h  codec.cc  codec.h  entities.cc  entities.h  http_proxy.cc  http_proxy.h
src/lib/utility/: ctor.h  log.cc  log.h  result.h
src/monitor/: CMakeLists.txt  main.cc  monitor.cc  monitor.h  monitor.qrc  monitor.ui
test/: CMakeLists.txt  http_proxy_example.cc  main.cc  test.cc
